<resources>
    <string name="app_name">Expenses Tracker</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <string name="transactions">Transactions</string>
    <string name="profile">Profile</string>
    <string name="title">Just title</string>
    <string name="welcome">Welcome to Expenses Tracker!</string>
    <string name="Please_log_in">Please Log in or create a new profile</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm">Confirm</string>
    <string name="new_transaction">New Transaction</string>
    <string name="field_cant_be_empty">Field can not be empty</string>
    <string name="it_is_too_long">It is too long</string>
    <string name="incorrect_value">Incorrect value!</string>
    <string name="your_accounts">Your total balance</string>
    <string name="wallet">Wallet</string>
    <string name="card">Card</string>
    <string name="add_account">Add account</string>
    <string name="products">Products</string>
    <string name="cafe">Cafe</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_account_name">Enter account name</string>
    <string name="enter_account_balance">Enter account balance</string>
    <string name="account_error">Fill correctly all the fields</string>
    <string name="select_account_to_pay">Select an account to pay</string>
    <string name="enter_amount_of_money">Enter amount of money</string>
    <string name="overview">Overview of your spendings</string>
    <string name="update_account">Update account</string>
    <string name="please_update_the_data">Please update the data</string>

    <string-array name="categoriesArray">
        <item>Products</item>
        <item>Cafe</item>
        <item>Movies</item>
        <item>Transport</item>
        <item>Health</item>
        <item>Gifts</item>
        <item>Family</item>
        <item>Shopping</item>
        <item>Sport</item>
        <item>Home things</item>
        <item>Investment</item>
        <item>Internet</item>
    </string-array>
</resources>