<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please add a new account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"/>

    <EditText
        android:id="@+id/etNewAccountName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/enter_account_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etNewAccountBalance"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etNewAccountName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/enter_account_balance"/>

    <Button
        android:id="@+id/buttonAccountAdding"
        style="@style/ButtonAccountAdding"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_account"
        app:layout_constraintEnd_toEndOf="@id/etNewAccountBalance"
        app:layout_constraintStart_toStartOf="@id/etNewAccountBalance"
        app:layout_constraintTop_toBottomOf="@+id/etNewAccountBalance" />

</androidx.constraintlayout.widget.ConstraintLayout>